--- a/style.css
+++ b/style.css
@@ -22,16 +22,18 @@ body {
 }
 
 #header h1 {
-	font-size: 5em;
+	font-size: 4em;
 	line-height: 1.2;
-	font-family: Roboto Condensed;
+	font-family: Oswald;
 	font-weight: bold;
+	color: #EEEEEE;
 	margin: 0;
 }
 
 #header h2 {
 	font-size: 2em;
-	font-family: Roboto;
+	font-family: Yanone Kaffeesatz;
+	color: #EEEEEE;
 	margin: 0;
 }
 
