--- a/style.css
+++ b/style.css
@@ -1,68 +1,177 @@
+.navbar {
+	opacity: 0.85;
+}
+
 body {
-	margin: 0;
-	padding: 0;
-	font-family: Cabin, sans-serif;
-	font-size: 20px;
-	color: #5C5C5C;
-	line-height: 1.6;
+	background-image: url('https://wallpapercave.com/wp/3vZjpA5.jpg')
+}
+#logo {
+	width: 30px;
+	border-radius: 5px;
 }
 
-#header {
-	background-image: url('./img/beach.jpg');
-	background-size: cover;
-	background-position: center;
-	height: 100vh;
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
-	text-align: center;
-	padding: 0 20px;
-	color: #fff;
-}
-
-#header h1 {
-	font-size: 4em;
-	line-height: 1.2;
-	font-family: Oswald;
-	font-weight: bold;
-	color: #EEEEEE;
-	margin: 0;
-}
-
-#header h2 {
-	font-size: 2em;
-	font-family: Yanone Kaffeesatz;
-	color: #EEEEEE;
-	margin: 0;
-}
-
-#section-a {
+.title-block {
+	margin: 100px 0;
+	background-color: white;
 	padding: 20px;
-	background: #5A5A5A;
-	color: #fff;
+	width: 400px;
+	border-radius: 10px;
+}
+
+h1, h2 {
+/*	font-family: 'Cabin', sans-serif;
+	
+	font-family: 'Alegreya', serif;
+	font-family: 'Titillium Web', sans-serif;
+	font-family: 'Raleway', sans-serif;
+	font-family: 'PT Sans Narrow', sans-serif;
+    font-family: 'Catamaran', sans-serif;
+    font-family: 'Exo 2', sans-serif;*/
+	font-family: 'Yanone Kaffeesatz', sans-serif;
+}
+
+i {
+	color: #025BAF;
+	padding: 10px;
+}
+
+i:hover {
+	color: #404040;
+}
+
+.content {
+	background-color: #C6C6C6;
+	border-radius: 10px;
+	padding: 50px 20px
+}
+
+.content img {
+	max-height: 250px;
+	border-radius: 10px;
+	border: 3px solid black;
+	display: block;
+	margin: auto;
+	margin-bottom: 40px;
+}
+
+.content p {
+	/*margin: 20px;*/
+}
+
+.content > h2 {
+	margin: 20px 0;
+	font-size: 50px;
+}
+
+#about-link {
+	display: block;
+	position: relative;
+	top: -100px;
+}
+
+.heading {
+	margin: 50px 0 20px 0;
+}
+
+.grid {
+	display: grid;
+	grid-template-columns: repeat(auto-fit, minmax(200px,1fr));
+	grid-template-rows: repeat(auto-fit, minmax(250px,1fr));
+	grid-column-gap: 2em;
+	grid-row-gap: 2em;
+}
+
+.grid > div {
+	background-color: #045BB6;
+	color: white;
+	border-radius: 10px;
+	padding: 0.75em;
+	/*margin: 10px;*/
+	/*align-self: center;*/
+  	/*justify-self: center;*/
+}
+
+/*.grid > div:nth-child(odd) {
+	background: #045BB6;
+	color: white
+}*/
+
+.grid > div > img {
+	max-width: 100%;
+    max-height: 100%;
+    object-fit: cover;
+    margin-bottom: 5px;
+    border: black 1px solid;
+}
+
+/*Shade block hove animation*/
+.block {
+	box-shadow: 4px 4px 7px #333;
+	overflow: hidden;
+	position: relative;
+	margin-bottom: 10%;
+}
+
+.block::after, .block::before {
+	content: '';
+	background: rgba(0,0,0,0.6);
+	position: absolute;
+	display: block;
+	width: 50%;
+	height: 100%;
+	top: 0;
+	overflow: hidden;
+}
+
+.block::after {
+	left: -50%;
+	transition: 0.5s;
+}
+
+.block::before {
+	right: -50%;
+	transition: 0.5s;
+}
+
+.block:hover:after {
+	left: 0;
+}
+
+.block:hover:before {
+	right: 0;
+}
+
+.caption {
 	text-align: center;
-}
-
-#section-b {
-	padding: 20px;
-	text-align: center;
-}
-
-#section-c {
-	display:flex ;
-}
-
-#section-c div {
-	padding: 20px;
-}
-
-#section-c .box-1, #section-c .box-3 {
-	background: #5A5A5A;
+	font-family: "Anton", serif;
+	font-size: 1rem;
+	/*letter-spacing: 0.4rem;*/
+	position: absolute;
+	border-radius: 10px;
+	display: block;
+	padding: 15px 2px;
+	width: 60%;
+	left: 20%;
+	top: -40%;
+	z-index: 1;
 	color: #fff;
+	border: 2px solid #fff;
+	transition: top 0.5s;
 }
 
-#section-c .box-2 {
-	background: #C5C4C4;
-	color: #000;
+.block:hover .caption {
+	top: 33%;
+}
+/*End shade block*/
+
+.contact {
+	margin: 100px 0;
+	background-color: #C6C6C6;
+	padding: 20px;
+	height: 200px;
+	border-radius: 10px;
+}
+
+#footer {
+	color: #fff;
 }
