--- a/style.css
+++ b/style.css
@@ -8,6 +8,35 @@ body {
 	line-height: 1.6;
 }
 
+img {
+	display: block;
+	width: 100%;
+	height: auto;
+}
+
+h1, h2, h3 {
+	margin: 0;
+}
+
+p {
+	margin: 0;
+	padding: 1em 0;
+}
+
+.btn {
+	display: inline-block;
+	background: #333;
+	color: #fff;
+	text-decoration: none;
+	padding: 0.5em 1em;
+	border: 1px solid #666;
+	margin: 0.25em 0;
+}
+
+.btn:hover {
+	backgorund: #eaeaea;
+	color: #333;
+}
 
 /* Header */
 #header {
@@ -20,8 +49,9 @@ body {
 	justify-content: center;
 	align-items: center;
 	text-align: center;
-	padding: 0 20px;
+	padding: 0 1em;
 	color: #fff;
+	margin-bottom: 1em;
 }
 
 #header h1 {
@@ -30,7 +60,7 @@ body {
 	font-family: Oswald;
 	font-weight: bold;
 	color: #FFF;
-	margin: 0;
+	margin: 0.5em 0;
 }
 
 #header h2 {
@@ -40,15 +70,42 @@ body {
 	margin: 0;
 }
 
+
+/* Grid setup */
+.grid {
+	margin: 0 5%;
+	display: grid;
+	grid-template-columns: 2fr 3fr 1fr;
+	grid-auto-rows: minmax(200px, auto);
+	grid-gap: 1em;
+
+}
+
+/* Profile pic */
+#profile img {
+	/*height: 400px;*/
+	border-radius: 30px;
+	grid-column: 1;
+}
+
 /* About */
 #about {
-	padding: 30px 100px;
+	padding: 2em;
 	background: #5A5A5A;
 	color: #fff;
+	border-radius: 30px;
+	/*grid-column: 1;*/
+}
+
+#about h2 {
+	font-size: 2em;
+}
+
+#about p {
+	font-size: 1.25em;
 }
 
 #section-b {
-	padding: 20px;
 	text-align: center;
 }
 
@@ -68,4 +125,14 @@ body {
 #section-c .box-2 {
 	background: #C5C4C4;
 	color: #000;
+}
+
+@media(min-width: 700px) {
+	/*.grid {
+		display: grid;
+		grid-template-columns: repeat(2, minmax(auto, 30em));
+	}*/
+	#about {
+		/*grid-column: 2;*/
+	}
 }
