--- a/style.css
+++ b/style.css
@@ -75,17 +75,23 @@ p {
 .grid {
 	margin: 0 5%;
 	display: grid;
-	grid-template-columns: 2fr 3fr 1fr;
-	grid-auto-rows: minmax(200px, auto);
+	grid-template-columns: repeat(2, 1fr);
+	/*grid-auto-rows: minmax(200px, auto);*/
 	grid-gap: 1em;
-
+	grid-template-areas:
+	"img img"
+	"about about";
 }
 
 /* Profile pic */
+#profile {
+	grid-area: img;
+	align-self: center;
+}
+
 #profile img {
 	/*height: 400px;*/
 	border-radius: 30px;
-	grid-column: 1;
 }
 
 /* About */
@@ -94,7 +100,7 @@ p {
 	background: #5A5A5A;
 	color: #fff;
 	border-radius: 30px;
-	/*grid-column: 1;*/
+	grid-area: about;
 }
 
 #about h2 {
@@ -127,12 +133,26 @@ p {
 	color: #000;
 }
 
-@media(min-width: 700px) {
-	/*.grid {
-		display: grid;
-		grid-template-columns: repeat(2, minmax(auto, 30em));
-	}*/
-	#about {
-		/*grid-column: 2;*/
-	}
+/* Tablet version */
+@media(min-width: 736px) {
+	.grid {
+	margin: 0 5%;
+	display: grid;
+	grid-template-columns: repeat(3, 1fr);
+	grid-gap: 1em;
+	grid-template-areas:
+	"img about about";
+
+}
+
+/* Desktop version */
+@media(min-width: 1080px) {
+	.grid {
+	margin: 0 5%;
+	display: grid;
+	grid-template-columns: 1fr repeat(3, 3fr) 1fr;
+	grid-gap: 1em;
+	grid-template-areas:
+	". img about about .";
+
 }
