--- a/style.css
+++ b/style.css
@@ -18,9 +18,14 @@ h1, h2, h3 {
 	margin: 0;
 }
 
+h2 {
+	font-size: 2em;
+}
+
 p {
 	margin: 0;
 	padding: 1em 0;
+	font-size: 1.25em;
 }
 
 .btn {
@@ -51,7 +56,7 @@ p {
 	text-align: center;
 	padding: 0 1em;
 	color: #fff;
-	margin-bottom: 1em;
+	margin-bottom: 3em;
 }
 
 #header h1 {
@@ -70,27 +75,28 @@ p {
 	margin: 0;
 }
 
-
 /* Grid setup */
 .grid {
 	margin: 0 5%;
 	display: grid;
 	grid-template-columns: repeat(2, 1fr);
-	/*grid-auto-rows: minmax(200px, auto);*/
-	grid-gap: 1em;
+	grid-auto-rows: minmax(350px, auto);
+	grid-gap: 2em;
 	grid-template-areas:
-	"img img"
-	"about about";
+	"p p"
+	"a a"
+	"pr pr"
+	"t ."
+	"f f";
 }
 
 /* Profile pic */
 #profile {
-	grid-area: img;
+	grid-area: p;
 	align-self: center;
 }
 
 #profile img {
-	/*height: 400px;*/
 	border-radius: 30px;
 }
 
@@ -100,19 +106,33 @@ p {
 	background: #5A5A5A;
 	color: #fff;
 	border-radius: 30px;
-	grid-area: about;
+	grid-area: a;
 }
 
-#about h2 {
-	font-size: 2em;
+/* Projects */
+#projects {
+	padding: 2em;
+	background: #5A5A5A;
+	color: #fff;
+	border-radius: 30px;
+	grid-area: pr;
 }
 
-#about p {
-	font-size: 1.25em;
+/* Tribute */
+#tribute {
+	grid-area: t;
+	align-self: center;
 }
 
-#section-b {
-	text-align: center;
+#tribute img {
+	border-radius: 30px;
+	border: black 1px solid;
+}
+
+/* Footer */
+#footer {
+	grid-area: f;
+	justify-self: center;
 }
 
 #section-c {
@@ -139,10 +159,11 @@ p {
 	margin: 0 5%;
 	display: grid;
 	grid-template-columns: repeat(3, 1fr);
-	grid-gap: 1em;
+	grid-gap: 3em;
 	grid-template-areas:
-	"img about about";
-
+	"p a a"
+	"pr pr t"
+	"f f f";
 }
 
 /* Desktop version */
@@ -150,9 +171,10 @@ p {
 	.grid {
 	margin: 0 5%;
 	display: grid;
-	grid-template-columns: 1fr repeat(3, 3fr) 1fr;
-	grid-gap: 1em;
+	grid-template-columns: 2fr repeat(3, 3fr) 2fr;
+	grid-gap: 4em;
 	grid-template-areas:
-	". img about about .";
-
+	". p a a ."
+	". pr pr t ."
+	". f f f .";
 }
