--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ body {
 	font-size: 20px;
 	color: #5C5C5C;
 	line-height: 1.6;
+	background: #ECECEC;
 }
 
 img {
@@ -81,13 +82,14 @@ p {
 	display: grid;
 	grid-template-columns: repeat(2, 1fr);
 	grid-auto-rows: minmax(350px, auto);
-	grid-gap: 2em;
+	grid-gap: 1.5em;
 	grid-template-areas:
 	"p p"
 	"a a"
 	"pr pr"
-	"t ."
-	"f f";
+	"t q"
+	"w c"
+	"po we";
 }
 
 /* Profile pic */
@@ -129,28 +131,65 @@ p {
 	border: black 1px solid;
 }
 
+/* Quote */
+#quote {
+	grid-area: q;
+	align-self: center;
+}
+
+#quote img {
+	border-radius: 30px;
+	border: black 1px solid;
+}
+
+/* Wikipedia viewer */
+#wiki {
+	grid-area: w;
+	align-self: center;
+}
+
+#wiki img {
+	border-radius: 30px;
+	border: black 1px solid;
+}
+
+/* JavaScript Calculator*/
+#calc {
+	grid-area: c;
+	align-self: center;
+}
+
+#calc img {
+	border-radius: 30px;
+	border: black 1px solid;
+}
+
+/* Pomodoro clock*/
+#pomodoro {
+	grid-area: po;
+	align-self: center;
+}
+
+#pomodoro img {
+	border-radius: 30px;
+	border: black 1px solid;
+}
+
+/* Weather app */
+#weather {
+	grid-area: we;
+	align-self: center;
+}
+
+#weather img {
+	border-radius: 30px;
+	border: black 1px solid;
+}
+
 /* Footer */
 #footer {
-	grid-area: f;
-	justify-self: center;
-}
-
-#section-c {
-	display:flex ;
-}
-
-#section-c div {
-	padding: 20px;
-}
-
-#section-c .box-1, #section-c .box-3 {
-	background: #5A5A5A;
-	color: #fff;
-}
-
-#section-c .box-2 {
-	background: #C5C4C4;
-	color: #000;
+	margin: 30px 0;
+	text-align: center;
 }
 
 /* Tablet version */
@@ -159,11 +198,12 @@ p {
 	margin: 0 5%;
 	display: grid;
 	grid-template-columns: repeat(3, 1fr);
-	grid-gap: 3em;
+	grid-gap: 2em;
 	grid-template-areas:
 	"p a a"
 	"pr pr t"
-	"f f f";
+	"q w c"
+	"we po .";
 }
 
 /* Desktop version */
@@ -172,9 +212,10 @@ p {
 	margin: 0 5%;
 	display: grid;
 	grid-template-columns: 2fr repeat(3, 3fr) 2fr;
-	grid-gap: 4em;
+	grid-gap: 1.5em;
 	grid-template-areas:
 	". p a a ."
 	". pr pr t ."
-	". f f f .";
+	". q w c ."
+	". we po . .";
 }
