--- a/style.css
+++ b/style.css
@@ -20,13 +20,13 @@ h1, h2, h3 {
 }
 
 h2 {
-	font-size: 2em;
+	font-size: 1.5em;
 }
 
 p {
 	margin: 0;
-	padding: 1em 0;
-	font-size: 1.25em;
+	padding-top: 1em;
+	font-size: 1em;
 }
 
 .btn {
@@ -42,6 +42,10 @@ p {
 .btn:hover {
 	background: #eaeaea;
 	color: #333;
+}
+
+.shadow {
+	box-shadow: 10px 10px #424141;
 }
 
 /* Header */
@@ -81,12 +85,14 @@ p {
 	margin: 0 5%;
 	display: grid;
 	grid-template-columns: repeat(2, 1fr);
-	grid-auto-rows: minmax(350px, auto);
-	grid-gap: 1.5em;
+	grid-auto-rows: minmax(25px, auto);
+	grid-gap: 2.5em;
+	grid-row-gap: 3em;
 	grid-template-areas:
-	"p p"
+	"p l"
 	"a a"
 	"pr pr"
+	". ."
 	"t q"
 	"w c"
 	"po we";
@@ -95,17 +101,18 @@ p {
 /* Profile pic */
 #profile {
 	grid-area: p;
-	align-self: center;
+	/*align-self: center;*/
 }
 
 #profile img {
 	border-radius: 30px;
+	/*box-shadow: 10px 10px #424141;*/
 }
 
 /* About */
 #about {
 	padding: 2em;
-	background: #5A5A5A;
+	background: #999999;
 	color: #fff;
 	border-radius: 30px;
 	grid-area: a;
@@ -114,16 +121,25 @@ p {
 /* Projects */
 #projects {
 	padding: 2em;
-	background: #5A5A5A;
+	background: #999999;
 	color: #fff;
 	border-radius: 30px;
 	grid-area: pr;
 }
 
+/* Profile pic LinkedIn */
+#linked {
+	grid-area: l;
+}
+
+#linked img {
+	border-radius: 30px;
+}
+
 /* Tribute */
 #tribute {
 	grid-area: t;
-	align-self: center;
+	/*align-self: center;*/
 }
 
 #tribute img {
@@ -193,7 +209,7 @@ p {
 }
 
 /* Tablet version */
-@media(min-width: 800px) {
+@media only screen and (min-width: 800px) {
 	.grid {
 	margin: 0 5%;
 	display: grid;
@@ -201,21 +217,23 @@ p {
 	grid-gap: 2em;
 	grid-template-areas:
 	"p a a"
-	"pr pr t"
+	"pr pr l"
+	". . ."
 	"q w c"
-	"we po .";
+	"we po t";
 }
 
 /* Desktop version */
-@media(min-width: 1080px) {
+@media only screen and (min-width: 1080px) {
 	.grid {
 	margin: 0 5%;
 	display: grid;
-	grid-template-columns: 2fr repeat(3, 3fr) 2fr;
-	grid-gap: 1.5em;
+	grid-template-columns: 1fr repeat(3, 3fr) 1fr;
+	grid-gap: 2em;
 	grid-template-areas:
 	". p a a ."
-	". pr pr t ."
+	". pr pr l ."
+	". . . . ."
 	". q w c ."
-	". we po . .";
+	". we po t .";
 }
