--- a/style.css
+++ b/style.css
@@ -200,7 +200,7 @@ a > img:hover {
 }
 
 /* Tablet version */
-@media only screen and (min-width: 900px) {
+@media only screen and (min-width: 736px) and (max-width: 1079px) {
 	.grid {
 	margin: 0 5%;
 	display: grid;
