--- a/style.css
+++ b/style.css
@@ -34,6 +34,21 @@ a > img:hover {
 	box-shadow: none;
 }
 
+.social, .social > ul, .social > li {
+	list-style-type: none;
+	display: inline;
+	margin-right: 15px;
+	margin-top: 15px;
+}
+
+li > a {
+	color: #DED9D9;
+}
+
+li > a:hover {
+	color: #99FEB6;
+}
+
 .shadow {
 	box-shadow: 7px 7px #424141;
 }
@@ -72,7 +87,7 @@ a > img:hover {
 
 /* Grid setup */
 .grid {
-	margin: 0 5%;
+	margin: 0 1%;
 	display: grid;
 	grid-template-columns: repeat(2, 1fr);
 	grid-auto-rows: minmax(25px, auto);
@@ -83,6 +98,7 @@ a > img:hover {
 	"a a"
 	"pr pr"
 	". ."
+	"pb pb"
 	"t q"
 	"w c"
 	"po we"
@@ -116,6 +132,24 @@ a > img:hover {
 	color: #fff;
 	border-radius: 30px;
 	grid-area: pr;
+}
+
+/* Projects Banner */
+#project-banner {
+	grid-area: pb;
+	border: black 1px solid;
+	background-image: url('./img/city.jpg');
+	background-size: cover;
+	background-position: center;
+	height: 95vh;
+	text-align: center;
+	line-height: 8em;
+	color: #fff;
+	font-family: Oswald;
+	font-size: 3em;
+	font-weight: bold;
+
+
 }
 
 /* Profile pic LinkedIn */
@@ -202,7 +236,7 @@ a > img:hover {
 /* Tablet version */
 @media only screen and (min-width: 736px) and (max-width: 1079px) {
 	.grid {
-	margin: 0 5%;
+	/*margin: 0 5%;*/
 	display: grid;
 	grid-template-columns: repeat(3, 1fr);
 	grid-gap: 2em;
@@ -210,6 +244,7 @@ a > img:hover {
 	"p a a"
 	"pr pr l"
 	". . ."
+	"pb pb pb"
 	"q w c"
 	"we po t";
 	}
@@ -229,12 +264,17 @@ a > img:hover {
 		color: #DED9D9;
 		margin: 0;
 	}
+
+	#project-banner {
+		font-size: 5em;
+		line-height: 5em;
+	}
 }
 
 /* Desktop version */
 @media only screen and (min-width: 1080px) {
 	.grid {
-	margin: 0 5%;
+	/*margin: 0 5%;*/
 	display: grid;
 	grid-template-columns: 1fr repeat(3, 3fr) 1fr;
 	grid-gap: 2em;
@@ -242,6 +282,7 @@ a > img:hover {
 	". p a a ."
 	". pr pr l ."
 	". . . . ."
+	"pb pb pb pb pb"
 	". q w c ."
 	". we po t .";
 	}
@@ -260,5 +301,10 @@ a > img:hover {
 		font-family: Yanone Kaffeesatz;
 		color: #DED9D9;
 		margin: 0;
+	}
+
+	#project-banner {
+		font-size: 7em;
+		line-height: 3.5em;
 	}
 }
