--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ li > a:hover {
 	margin-bottom: 3em;
 	
 	/* fixed background scrolling*/
-	background-attachment: fixed;
+	background-attachment: scroll;
 }
 
 #header h1 {
@@ -153,7 +153,7 @@ li > a:hover {
 	font-family: Oswald;
 	font-size: 3em;
 	font-weight: bold;
-	background-attachment: fixed;
+	background-attachment: scroll;
 }
 
 /* Profile pic LinkedIn */
@@ -246,7 +246,7 @@ li > a:hover {
 	font-family: Oswald;
 	font-size: 2em;
 	font-weight: bold;
-	background-attachment: fixed;
+	background-attachment: scroll;
 }
 
 .contact2, .contact2 > ul, .contact2 > li {
@@ -305,6 +305,10 @@ li > a:hover {
 		font-size: 3em;
 		line-height: 3.5em;
 	}
+
+	#header, #project-banner, #contact {
+		background-attachment: fixed;
+	}
 }
 
 /* Desktop version */
@@ -348,5 +352,9 @@ li > a:hover {
 	#contact {
 		font-size: 3em;
 		line-height: 3.5em;
+	}
+
+	#header, #project-banner, #contact {
+		background-attachment: fixed;
 	}
 }
