--- a/style.css
+++ b/style.css
@@ -246,7 +246,7 @@ li > a:hover {
 	font-family: Oswald;
 	font-size: 2em;
 	font-weight: bold;
-	background-attachment: scroll;
+	/*background-attachment: scroll;*/
 }
 
 .contact2, .contact2 > ul, .contact2 > li {
