--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ li > a:hover {
 	margin-bottom: 3em;
 	
 	/* fixed background scrolling*/
-	background-attachment: scroll;
+	/*background-attachment: scroll;*/
 }
 
 #header h1 {
@@ -153,7 +153,7 @@ li > a:hover {
 	font-family: Oswald;
 	font-size: 3em;
 	font-weight: bold;
-	background-attachment: scroll;
+	/*background-attachment: scroll;*/
 }
 
 /* Profile pic LinkedIn */
