--- a/menu/style.css
+++ b/menu/style.css
@@ -5,17 +5,37 @@ body {
 	font-size: 15px;
 	background: #1b1b1e;
 	color: white;
+	text-align: center;
 }
 
 h1 {
 	font-family: 'Patua One', cursive;
 	font-size: 50px;
 	color: #d95d39;
+	margin: 20px 0;
 }
 
 h2 {
 	font-size: 30px;
 	color: #b5d2cb;
+	margin: 10px 0;
+}
+
+h3 {
+	font-size: 14px;
+	font-family: Roboto Condensed;
+	font-style: normal;
+	margin: 0 0 6px 0;
+}
+
+button {
+	padding: 10px 25px;
+	background-color: #FE4747;
+	border: 1px solid black;
+	font-size: 15px;
+	color: white;
+	border-radius: 8px;
+	margin-top: 10px;
 }
 
 div {
@@ -45,9 +65,9 @@ p {
 	bottom: 0;
 	text-align: justify;
 	height: 30px;
-	transition: height .5s;
-	-webkit-transition: height .5s;
-  	-moz-transition: height .5s;
+	transition: height .3s;
+	-webkit-transition: height .3s;
+  	-moz-transition: height .3s;
 }
 
 small {
@@ -79,4 +99,8 @@ small {
 
 .price {
 	float: right;
+}
+
+footer {
+	margin: 100px 0 20px 0;
 }
