--- a/v2/style.css
+++ b/v2/style.css
@@ -57,7 +57,7 @@ li > a:hover {
 
 /* Header */
 #header {
-	background-image: url('./img/mountain3.png');
+	background-image: url('./img/mountain.jpg');
 	background-size: cover;
 	background-position: center;
 	height: 30em;
