--- a/style.css
+++ b/style.css
@@ -100,11 +100,11 @@ li > a:hover {
 	"pr pr"
 	". ."
 	"pb pb"
-	"pu ga"
+	"col pu"
 	"me we"
 	"t q"
 	"w c"
-	"po ."
+	"po ga"
 	"co co";
 }
 
@@ -249,6 +249,16 @@ li > a:hover {
 	border: black 1px solid;
 }
 
+#colour {
+	grid-area: col;
+	align-self: center;
+}
+
+#colour img {
+	/*border-radius: 30px;*/
+	border: black 1px solid;
+}
+
 /* Contacts Banner */
 #contact {
 	grid-area: co;
@@ -296,8 +306,9 @@ li > a:hover {
 	". . . ."
 	"pb pb pb pb"
 	"me me q w"
-	"me me c we"
-	"pu ga t po"
+	"me me col col"
+	"pu ga col col"
+	"c we t po"
 	"co co co co";
 	}
 
@@ -349,8 +360,9 @@ li > a:hover {
 	". . . . . ."
 	"pb pb pb pb pb pb"
 	". me me q we ."
-	". me me w t ."
-	". pu ga c po ."
+	". me me col col ."
+	". pu ga col col ."
+	". w t c po ."
 	"co co co co co co";
 	}
 
