--- a/colour/colour.css
+++ b/colour/colour.css
@@ -62,7 +62,7 @@ button {
 	font-weight: 700;
 	color: steelblue;
 	letter-spacing: 1px;
-	font-size: inherit;
+	font-size: 0.8em;
 	transition: all 0.3s;
 	--webkit-transition: all 0.3s;
 	--moz-transition: all 0.3s;
@@ -77,7 +77,7 @@ button:hover {
 /* phone version */
 @media only screen and (max-width: 740px) {
 	h1 {
-		color: yellow;
-		font-size: 20px;
+		color: #EBEAEA;
+		font-size: 25px;
 	}
 }
