--- a/colour/colour.css
+++ b/colour/colour.css
@@ -22,6 +22,7 @@ h1 {
 #message {
 	display: inline-block;
 	width: 20%;
+	color: orange;
 }
 
 .container {
@@ -80,8 +81,8 @@ button:hover {
 	}
 
 	#message {
-	width: 25%;
-	font-size: 12px;
+	width: 20%;
+	font-size: 14px;
 	font-weight: 800;
 	}
 }
