--- a/style.css
+++ b/style.css
@@ -14,7 +14,8 @@ body {
 img {
 	display: block;
 	width: 100%;
-	height: auto;
+	/* height: 100%; */
+	border-radius: 5%;
 }
 
 h2 {
@@ -91,9 +92,9 @@ li > a:hover {
 	display: grid;
 	margin-top: 5px;
 	grid-template-columns: repeat(2, 1fr);
-	grid-auto-rows: minmax(25px, auto);
+	grid-auto-rows: minmax(30px, auto);
 	grid-gap: 0.5em;
-	/*grid-row-gap: 2em;*/
+	/* grid-row-gap: 2em; */
 	grid-template-areas:
 	"p l"
 	"a a"
@@ -105,7 +106,7 @@ li > a:hover {
 	"t q"
 	"w c"
 	"po ga"
-	"pat ."
+	"pat bo"
 	"co co";
 }
 
@@ -270,6 +271,15 @@ li > a:hover {
 	border: black 1px solid;
 }
 
+#book {
+	grid-area: bo;
+	align-self: center;
+}
+
+#book img {
+	border: black 1px solid;
+}
+
 /* Contacts Banner */
 #contact {
 	grid-area: co;
@@ -309,7 +319,7 @@ li > a:hover {
 	/*margin: 0 5%;*/
 	display: grid;
 	grid-template-columns: repeat(4, 1fr);
-	grid-gap: 0.5em;
+	grid-gap: 0.8em;
 	grid-template-areas:
 	". p l ."
 	"a a a a"
@@ -320,7 +330,7 @@ li > a:hover {
 	"me me col col"
 	"pu ga col col"
 	"c we t po"
-	". pat pat ."
+	". pat pat bo"
 	". pat pat ."
 	"co co co co";
 	}
@@ -365,7 +375,7 @@ li > a:hover {
 	/*margin: 0 5%;*/
 	display: grid;
 	grid-template-columns: 1fr repeat(4, 3fr) 1fr;
-	grid-gap: 0.5em;
+	grid-gap: 1em;
 	grid-template-areas:
 	". p p l l ."
 	". a a a a ."
@@ -376,7 +386,7 @@ li > a:hover {
 	". me me col col ."
 	". pu ga col col ."
 	". w t c po ."
-	". . pat pat . ."
+	". . pat pat bo ."
 	". . pat pat . ."
 	"co co co co co co";
 	}
