--- a/colour/colour.css
+++ b/colour/colour.css
@@ -1,16 +1,16 @@
 body {
 	background: #232323;
 	margin: 0;
-	font-family: "Montserrat";
+	font-family: "Mina";
 }
 
 h1 {
 	color: white;
 	text-align: center;
 	line-height: 1.1;
-	background: steelblue;
+	background: rgb(11, 175, 85);
 	margin: 0;
-	font-weight: normal;
+	font-weight: 800;
 	text-transform: uppercase;
 	padding: 20px 0;
 }
@@ -36,10 +36,14 @@ h1 {
 	padding-bottom: 30%;
 	float: left;
 	margin: 1.66%;
-	border-radius: 15%;
+	border-radius: 5%;
 	transition: background 0.4s;
 	--webkit-transition: background 0.4s;
 	--moz-transition: background 0.4s;
+}
+
+.square:hover {
+	opacity: 0.7;
 }
 
 #stripe {
@@ -59,18 +63,20 @@ button {
 	text-transform: uppercase;
 	height: 100%;
 	font-weight: 700;
-	color: steelblue;
+	color: rgb(13, 145, 253);
 	letter-spacing: 1px;
-	font-size: 0.8em;
+	font-family: "Mina";
 	transition: all 0.3s;
 	--webkit-transition: all 0.3s;
 	--moz-transition: all 0.3s;
 	outline: none;
+	padding: 0 5px;
+	margin: 0 -2.5px;
 }
 
 button:hover {
 	color: white;
-	background: steelblue;
+	background: rgb(13, 145, 253);
 }
 
 /* phone version */
