--- a/colour/colour.css
+++ b/colour/colour.css
@@ -8,7 +8,8 @@ h1 {
 	color: white;
 	text-align: center;
 	line-height: 1.1;
-	background: rgb(11, 175, 85);
+	background: linear-gradient(to right,rgb(11, 175, 85), rgba(56, 191, 253, 0.856));
+	/* background: rgb(11, 175, 85); */
 	margin: 0;
 	font-weight: 800;
 	text-transform: uppercase;
