resized image and rearrange

--- a/style.css
+++ b/style.css
@@ -326,12 +326,11 @@ li > a:hover {
 	"pr pr pr pr"
 	". . . ."
 	"pb pb pb pb"
-	"me me q w"
-	"me me col col"
-	"pu ga col col"
+	"col col q w"
+	"col col pat pat"
+	"pu ga pat pat"
 	"c we t po"
-	". pat pat bo"
-	". pat pat ."
+	". me bo ."
 	"co co co co";
 	}
 
@@ -382,12 +381,11 @@ li > a:hover {
 	". pr pr pr pr ."
 	". . . . . ."
 	"pb pb pb pb pb pb"
-	". me me q we ."
-	". me me col col ."
-	". pu ga col col ."
+	". col col q we ."
+	". col col pat pat ."
+	". pu ga pat pat ."
 	". w t c po ."
-	". . pat pat bo ."
-	". . pat pat . ."
+	". . me bo . ."
 	"co co co co co co";
 	}
 
