--- a/style.css
+++ b/style.css
@@ -121,6 +121,11 @@ li > a:hover {
 	grid-area: l;
 }
 
+#profile > img, #linked > img  {
+	width: 80%;
+	margin: 0 auto;
+}
+
 /* About */
 #about {
 	margin: auto 10%;
@@ -153,6 +158,7 @@ li > a:hover {
 	font-weight: bold;
 	/*background-attachment: scroll;*/
 	background-attachment: fixed;
+	margin-bottom: 50px;
 }
 
 /* Tribute */
