--- a/style.css
+++ b/style.css
@@ -14,16 +14,12 @@ body {
 img {
 	display: block;
 	width: 100%;
-	/* height: 100%; */
 	border-radius: 5%;
-}
-
-h2 {
-	font-size: 1.5em;
 }
 
 p {
 	padding-top: 1em;
+	padding-bottom: 1em;
 	font-size: 0.9em;
 }
 
@@ -64,8 +60,6 @@ li > a:hover {
 	text-align: center;
 	padding: 0 1em;
 	color: #fff;	
-	/* fixed background scrolling*/
-	/*background-attachment: scroll;*/
 	background-attachment: fixed;
 	margin-bottom: 50px;
 }
@@ -86,224 +80,101 @@ li > a:hover {
 	margin: 0;
 }
 
+.container {
+	width: 80%;
+	display: flex;
+	justify-content: space-around;
+}
+
+#profile, #linked {
+	width: 40%;
+}
+
+#profile img, #linked img {
+	border: black 1px solid;
+}
 
 /* Grid setup */
 .grid {
-	/*margin: 1%;*/
 	display: grid;
-	/* margin-top: 5px; */
+	margin: 0 auto;
+	width: 90%;
 	grid-template-columns: repeat(2, 1fr);
 	grid-auto-rows: minmax(30px, auto);
 	grid-gap: 0.9em;
-	/* grid-row-gap: 2em; */
 	grid-template-areas:
-	"p l"
-	"a a"
-	". ."
-	"pb pb"
-	"col rb"
-	"me we"
-	"t q"
-	"w c"
-	"po ga"
-	"pat pu"
-	"bo bo"
-	"co co";
-}
-
-/* Profile pic */
-#profile {
-	grid-area: p;
-}
-
-/* Profile pic */
-#linked {
-	grid-area: l;
-}
-
-#profile > img, #linked > img  {
-	width: 80%;
-	margin: 0 auto;
-}
-
-/* About */
-#about {
-	margin: auto 10%;
-	margin-top: 20px;
-	grid-area: a;
-}
-
-/* Projects */
-#projects {
-	padding: 2em;
-/*	background: #999999;
-	color: #fff;
-	border-radius: 30px;*/
-	grid-area: pr;
+	"rb rb"
+	"tr qu"
+	"ye ye"
+	"col we"
+	"wi ca"
+	"po pat"
+	"pu me";
 }
 
 /* Projects Banner */
 #project-banner {
-	grid-area: pb;
 	border: black 1px solid;
 	background-image: url('./img/city.jpg');
 	background-size: cover;
 	background-position: center;
-	/*height: 100vh;*/
 	text-align: center;
 	line-height: 8em;
 	color: #fff;
 	font-family: Oswald;
 	font-size: 3em;
 	font-weight: bold;
-	/*background-attachment: scroll;*/
 	background-attachment: fixed;
 	margin-bottom: 50px;
 }
 
-/* Tribute */
-#tribute {
-	grid-area: t;
-	/*align-self: center;*/
-}
-
-#tribute img {
-	/*border-radius: 30px;*/
-	border: black 1px solid;
-}
-
-/* Quote */
-#quote {
-	grid-area: q;
-	align-self: center;
-}
-
-#quote img {
-	/*border-radius: 30px;*/
-	border: black 1px solid;
-}
-
-/* Wikipedia viewer */
-#wiki {
-	grid-area: w;
-	align-self: center;
-}
-
-#wiki img {
-	/*border-radius: 30px;*/
-	border: black 1px solid;
-}
-
-/* JavaScript Calculator*/
-#calc {
-	grid-area: c;
-	align-self: center;
-}
-
-#calc img {
-	/*border-radius: 30px;*/
-	border: black 1px solid;
-}
-
-/* Pomodoro clock*/
-#pomodoro {
-	grid-area: po;
-	align-self: center;
-}
-
-#pomodoro img {
-	/*border-radius: 30px;*/
-	border: black 1px solid;
-}
-
-/* Weather app */
-#weather {
-	grid-area: we;
-	align-self: center;
-}
-
-#weather img {
-	/*border-radius: 30px;*/
-	border: black 1px solid;
-}
-
-/* Menu */
-#menu {
-	grid-area: me;
-	align-self: center;
-}
-
-#menu img {
-	/*border-radius: 30px;*/
-	border: black 1px solid;
-}
-
-#puppy {
-	grid-area: pu;
-	align-self: center;
-}
-
-#puppy img {
-	/*border-radius: 30px;*/
-	border: black 1px solid;
-}
-
-#gallery {
-	grid-area: ga;
-	align-self: center;
-}
-
-#gallery img {
-	/*border-radius: 30px;*/
-	border: black 1px solid;
-}
-
-#colour {
-	grid-area: col;
-	align-self: center;
-}
-
-#colour img {
-	/*border-radius: 30px;*/
-	border: black 1px solid;
-}
-
-#patatap {
-	grid-area: pat;
-	align-self: center;
-}
-
-#patatap img {
-	/*border-radius: 30px;*/
-	border: black 1px solid;
-}
-
-#book {
-	grid-area: bo;
-	align-self: center;
-}
-
-#book img {
+.grid img {
 	border: black 1px solid;
 }
 
 #railsblog {
 	grid-area: rb;
-	align-self: center;
 }
-
-#railsblog > img {
-	border: black 1px solid;
+#tribute {
+	grid-area: tr;
+}
+#quote {
+	grid-area: qu;
+}
+#wiki {
+	grid-area: wi;
+}
+#calc {
+	grid-area: ca;
+}
+#pomodoro {
+	grid-area: po;
+}
+#weather {
+	grid-area: we;
+}
+#colour {
+	grid-area: col;
+}
+#patatap {
+	grid-area: pat;
+}
+#yelp {
+	grid-area: ye;
+}
+#menu {
+	grid-area: me;
+}
+#puppy {
+	grid-area: pu;
 }
 
 /* Contacts Banner */
 #contact {
-	grid-area: co;
 	border: black 1px solid;
 	background-image: url('./img/laptop.jpg');
 	background-size: cover;
 	background-position: center;
-	/*height: 100vh;*/
 	opacity: 1;
 	text-align: center;
 	line-height: 5em;
@@ -311,8 +182,8 @@ li > a:hover {
 	font-family: Oswald;
 	font-size: 2em;
 	font-weight: bold;
-	/*background-attachment: scroll;*/
 	background-attachment: fixed;
+	margin-top: 50px;
 }
 
 .contact2, .contact2 > ul, .contact2 > li {
@@ -332,29 +203,23 @@ li > a:hover {
 /* Tablet version */
 @media only screen and (min-width: 740px) and (max-width: 1079px) {
 	.grid {
-	/*margin: 0 5%;*/
 	display: grid;
 	grid-template-columns: repeat(4, 1fr);
 	grid-gap: 0.8em;
 	grid-template-areas:
-	". p l ."
-	"a a a a"
-	/* "pr pr pr pr" */
-	". . . ."
-	"pb pb pb pb"
-	"col col q w"
+	"rb rb tr qu"
+	"rb rb ye ye"
+	"wi ca ye ye"
+	"col col we po"
 	"col col pat pat"
-	"pu ga pat pat"
-	"c we t po"
-	"me bo rb rb"
-	"co co co co";
+	"pu me pat pat";
 	}
 
 	#header h1 {
 	font-size: 5em;
 	line-height: 1.2;
 	font-family: Oswald;
-	font-weight: bold;
+	font-weight: bold; 
 	color: #FFF;
 	margin: 0.5em 0;
 	}
@@ -379,30 +244,22 @@ li > a:hover {
 	#header, #project-banner, #contact {
 		background-attachment: fixed;
 	}
-	#about h2 {
-		/*color: orange;*/
-	}
 }
 
 /* Desktop version */
 @media only screen and (min-width: 1080px) {
 	.grid {
-	/*margin: 0 5%;*/
 	display: grid;
 	grid-template-columns: 1fr repeat(4, 3fr) 1fr;
-	grid-gap: 2.5em;
+	grid-gap: 1.5em;
 	grid-template-areas:
-	". p p l l ."
-	". a a a a ."
-	/* ". pr pr pr pr ." */
-	". . . . . ."
-	"pb pb pb pb pb pb"
-	". col col q we ."
+
+	". rb rb tr qu ."
+	". rb rb ye ye ."
+	". wi ca ye ye ."
+	". col col we po ."
 	". col col pat pat ."
-	". pu ga pat pat ."
-	". w t c po ."
-	". me bo rb rb ."
-	"co co co co co co";
+	". pu me pat pat .";
 	}
 
 	#header h1 {
@@ -433,8 +290,5 @@ li > a:hover {
 
 	#header, #project-banner, #contact {
 		background-attachment: fixed;
-	}
-	#about h2 {
-		/*color: red;*/
 	}
 }
