adjust height to 100%

--- a/style.css
+++ b/style.css
@@ -132,6 +132,11 @@ li > a:hover {
 	border: black 1px solid;
 }
 
+.grid div img {
+	height: 100%;
+	/* vertical-align: middle; */
+}
+
 #railsblog {
 	grid-area: rb;
 }
