--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ li > a:hover {
 	font-size: 1.5em;
 	font-family: Yanone Kaffeesatz;
 	color: #DED9D9;
-	margin: 0;
+	margin: 0.5em 0;
 }
 
 #header h3 {
