--- a/wordGame/style.css
+++ b/wordGame/style.css
@@ -1,7 +1,29 @@
-.box {
+h1 {
+  text-align: center;
+}
+.square {
   background-color: coral;
   width: 100px;
   height: 100px;
-  display: block;
-  border-radius: 5%;
+  border-radius: 10%;
+  margin: 2px;
+}
+
+.outer {
+  text-align: center;
+}
+
+.outer > div {
+  display: inline-block;
+}
+
+div {
+  text-align: center;
+}
+
+button,
+textareas {
+  padding: 0.5em 0.5em;
+  font-size: 12pt;
+  border-radius: 10%;
 }
