--- a/wordGame/style.css
+++ b/wordGame/style.css
@@ -1,7 +1,11 @@
 h1 {
   text-align: center;
 }
+
 .square {
+  font-size: 40px;
+  font-family: Arial, Helvetica, sans-serif;
+  color: white;
   background-color: darkgrey;
   width: 100px;
   height: 100px;
