--- a/wordGame/style.css
+++ b/wordGame/style.css
@@ -1,5 +1,7 @@
 h1 {
   text-align: center;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 50px;
 }
 
 .square {
@@ -25,13 +27,6 @@ div {
   text-align: center;
 }
 
-button,
-textareas {
-  padding: 0.5em 0.5em;
-  font-size: 12pt;
-  border-radius: 10%;
-}
-
 .hidden {
   visibility: hidden;
 }
@@ -52,4 +47,12 @@ textareas {
 
 #yay {
   font-size: 150px;
+  padding: 0;
+  margin: 0;
+}
+
+#info {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 20px;
+  color: dodgerblue;
 }
